[gd_scene load_steps=22 format=2]

[ext_resource path="res://character/tile_0020_1.png" type="Texture" id=1]
[ext_resource path="res://character/tile_0023.png" type="Texture" id=2]
[ext_resource path="res://character/tile_0019.png" type="Texture" id=3]
[ext_resource path="res://character/tile_0029.png" type="Texture" id=4]
[ext_resource path="res://character/tile_0021.png" type="Texture" id=5]
[ext_resource path="res://character/tile_0020.png" type="Texture" id=6]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=7]
[ext_resource path="res://character/tile_0022.png" type="Texture" id=8]
[ext_resource path="res://character/tile_0024.png" type="Texture" id=9]
[ext_resource path="res://character/tile_0025.png" type="Texture" id=10]
[ext_resource path="res://character/tile_0028.png" type="Texture" id=11]
[ext_resource path="res://Area2D.gd" type="Script" id=12]
[ext_resource path="res://Timer.gd" type="Script" id=13]
[ext_resource path="res://PositionUpdateTimer.gd" type="Script" id=14]
[ext_resource path="res://sounds/jump01.ogg" type="AudioStream" id=15]
[ext_resource path="res://sounds/coin01.ogg" type="AudioStream" id=16]
[ext_resource path="res://sounds/eat_01.ogg" type="AudioStream" id=17]
[ext_resource path="res://sounds/plop.wav" type="AudioStream" id=18]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.46051
height = 7.79165

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "suprise",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "climb",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "stoop",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 1.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 9.9575, 12.9306 )

[node name="player" type="KinematicBody2D"]
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "walk"

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.7, 0.7 )
limit_left = 0
limit_top = 0
limit_right = 1200
limit_bottom = 180
smoothing_enabled = true
smoothing_speed = 10.0
editor_draw_limits = true

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 6

[node name="RayCast2D_up" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -15 )
collision_mask = 2

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="Area2D"]
autostart = true
script = ExtResource( 13 )

[node name="placer" type="RayCast2D" parent="."]
enabled = true

[node name="PositionUpdateTimer" type="Timer" parent="."]
autostart = true
script = ExtResource( 14 )

[node name="jumpAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )

[node name="coinAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )

[node name="eatAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )

[node name="placeAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 18 )
[connection signal="isDay" from="." to="Area2D/Timer" method="_on_KinematicBody2D_isDay"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Area2D/Timer" to="Area2D" method="_on_Timer_timeout"]
[connection signal="timeout" from="PositionUpdateTimer" to="." method="_on_PositionUpdateTimer_timeout"]
